Bug 549674 part.1 Commit composition string at setting value of <input> or <textarea> r=smaug